fixed the alignment issue of quote

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,14 +16,14 @@
   background-color: var(--background);
 } 
 
-/* html,
+html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
   height: 100%;
   margin: 0;
   
-} */
+}
 
 /* body {
   -webkit-font-smoothing: antialiased;
@@ -41,6 +41,22 @@ body {
 h1 {
   font-size: 2.5rem;
 }
+
+
+/* p {
+  display: grid;
+    grid-template-rows: auto;
+    justify-items: center; 
+    text-align: center;
+     padding: 100px 20px;
+    color: white; 
+    width: 100%;
+    margin: 2rem 0 2rem 0;
+    min-height: 30vh;  
+    padding-left: 1rem;
+    padding-right: 1rem;
+    background-color: rgba(0, 0, 0, 0.2);
+} */
 
 
 /* a {
